--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -25,34 +25,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import selenium as sn\n",
-    "from bs4 import BeautifulSoup\n",
     "\n",
+    "from bs4 import BeautifulSoup\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service as ChromeService\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
     "\n",
-    "driver = webdriver.Chrome(service=ChromeService(ChromeDriverManager().install()))\n",
-    "driver.get(\"https://www.google.com\")"
+    "load_dotenv()\n",
+    "\n",
+    "link = os.getenv('LINK')\n",
+    "user_login = os.getenv('USER_LOGIN')\n",
+    "user_pw = os.getenv('USER_PASSWORD')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setting up driver for Google Chrome:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "driver = webdriver.Chrome(service=ChromeService(ChromeDriverManager().install()))\n",
+    "driver.get(link)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rs-florestal-7jOzsPaI-py3.11",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -66,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
