--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +56,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Checks if the webdriver is installed and up to date\n",
     "driver = webdriver.Chrome(service=ChromeService(ChromeDriverManager().install()))\n",
+    "\n",
+    "# Opens the link stored in .env\n",
     "driver.get(link)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
