--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,8 @@
     "from bs4 import BeautifulSoup\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service as ChromeService\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.common.keys import Keys\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +66,23 @@
     "driver = webdriver.Chrome(service=ChromeService(ChromeDriverManager().install()))\n",
     "\n",
     "# Opens the link stored in .env\n",
-    "driver.get(link)"
+    "driver.get(link)\n",
+    "\n",
+    "# Fill the login field\n",
+    "login = driver.find_element(By.ID, 'txtLogin')\n",
+    "login.send_keys(user_login)\n",
+    "\n",
+    "# Fill the password field\n",
+    "login = driver.find_element(By.ID, 'txtSenha')\n",
+    "login.send_keys(user_pw)\n",
+    "\n",
+    "# Click the enter button\n",
+    "enter_btn = driver.find_element(By.ID, 'btnOk')\n",
+    "enter_btn.click()\n",
+    "\n",
+    "# Enter the 'Recuperação Ambiental' module\n",
+    "module_btn = driver.find_element(By.ID, 'imbModuloP3')\n",
+    "module_btn.click()\n"
    ]
   },
   {
