--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,8 @@
     "from selenium.webdriver.chrome.service import Service as ChromeService\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,9 +82,19 @@
     "enter_btn = driver.find_element(By.ID, 'btnOk')\n",
     "enter_btn.click()\n",
     "\n",
-    "# Enter the 'Recuperação Ambiental' module\n",
+    "# Enter the 'Recuperação Ambiental' module and 'Controle' submodule\n",
     "module_btn = driver.find_element(By.ID, 'imbModuloP3')\n",
-    "module_btn.click()\n"
+    "driver.execute_script(\"arguments[0].click();\", module_btn)\n",
+    "sub_module_btn = driver.find_element(By.ID, 'imbModuloP3')\n",
+    "sub_module_btn = WebDriverWait(driver, 10).until(\n",
+    "    EC.visibility_of_element_located((By.CSS_SELECTOR, \"div.rollfx[onclick*='DefaultRecuperacaoAmbientalControle.aspx']\"))\n",
+    ")\n",
+    "driver.execute_script(\"arguments[0].click();\", sub_module_btn)\n",
+    "\n",
+    "# Wait untill the new page is completed loaded\n",
+    "WebDriverWait(driver, 10).until(\n",
+    "    lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
+    ")\n"
    ]
   },
   {
