--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,10 +91,35 @@
     ")\n",
     "driver.execute_script(\"arguments[0].click();\", sub_module_btn)\n",
     "\n",
-    "# Wait untill the new page is completed loaded\n",
+    "# Wait until the new page is completely loaded\n",
     "WebDriverWait(driver, 10).until(\n",
     "    lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
-    ")\n"
+    ")\n",
+    "\n",
+    "# Enter the module 'Controle > Boletim de Silvicultura'\n",
+    "# Click on first element ('Controle') and wait until the \n",
+    "# submodule ('Boletim de Silvicultura') is visible, then click it\n",
+    "first_element = WebDriverWait(driver, 10).until(\n",
+    "    EC.visibility_of_element_located((By.CSS_SELECTOR, \"td.MenuItem[id='Menu1-menuItem000']\"))\n",
+    ")\n",
+    "first_element.click()\n",
+    "\n",
+    "# Wait until the second element is visible and clickable\n",
+    "second_element = WebDriverWait(driver, 10).until(\n",
+    "    EC.visibility_of_element_located((By.CSS_SELECTOR, \"td.MenuItem[id='Menu1-menuItem000-subMenu-menuItem000']\"))\n",
+    ")\n",
+    "second_element.click()\n",
+    "\n",
+    "# Wait until the new page is completely loaded\n",
+    "WebDriverWait(driver, 10).until(\n",
+    "    lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
+    ")\n",
+    "\n",
+    "# Select the planned services\n",
+    "radio_button = WebDriverWait(driver, 10).until(\n",
+    "    EC.visibility_of_element_located((By.ID, 'rblApontamento_0'))\n",
+    ")\n",
+    "driver.execute_script(\"arguments[0].click();\", radio_button)\n"
    ]
   },
   {
