--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -25,13 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import selenium as sn\n",
+    "import time\n",
     "\n",
     "from bs4 import BeautifulSoup\n",
     "from selenium import webdriver\n",
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,11 +116,31 @@
     "    lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
     ")\n",
     "\n",
-    "# Select the planned services\n",
+    "# time.sleep(10)\n",
+    "\n",
+    "# Wait for the iframe to load\n",
+    "iframe = WebDriverWait(driver, 10).until(\n",
+    "    EC.presence_of_element_located((By.ID, 'conteudo'))\n",
+    ")\n",
+    "\n",
+    "# Switch context to iframe\n",
+    "driver.switch_to.frame(iframe)\n",
+    "\n",
+    "# Wait until the element is loaded and visible\n",
     "radio_button = WebDriverWait(driver, 10).until(\n",
     "    EC.visibility_of_element_located((By.ID, 'rblApontamento_0'))\n",
     ")\n",
-    "driver.execute_script(\"arguments[0].click();\", radio_button)\n"
+    "\n",
+    "# Using Javascript to trigger the 'click' method\n",
+    "driver.execute_script(\"\"\"\n",
+    "    var radio = arguments[0];\n",
+    "    radio.checked = true;\n",
+    "    var event = new Event('click', { bubbles: true });\n",
+    "    radio.dispatchEvent(event);\n",
+    "\"\"\", radio_button)\n",
+    "\n",
+    "# Go back to the original context\n",
+    "driver.switch_to.default_content()\n"
    ]
   },
   {
