--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,9 +61,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Checks if the webdriver is installed and up to date\n",
     "driver = webdriver.Chrome(service=ChromeService(ChromeDriverManager().install()))\n",
@@ -139,8 +150,25 @@
     "    radio.dispatchEvent(event);\n",
     "\"\"\", radio_button)\n",
     "\n",
-    "# Go back to the original context\n",
-    "driver.switch_to.default_content()\n"
+    "# Wait until the new page is completely loaded\n",
+    "WebDriverWait(driver, 10).until(\n",
+    "    lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
+    ")\n",
+    "time.sleep(5)\n",
+    "# Wait until the href element is loaded and ready\n",
+    "table = WebDriverWait(driver, 10).until(\n",
+    "    EC.visibility_of_element_located((By.ID, 'olvOrdemServico'))\n",
+    ")\n",
+    "tbody = table.find_element(By.TAG_NAME, \"tbody\")\n",
+    "even_rows = tbody.find_elements(By.CSS_SELECTOR, \"tr.even\")\n",
+    "cell = even_rows[0].find_elements(By.TAG_NAME, \"td\")[1]\n",
+    "link = cell.find_element(By.TAG_NAME, \"a\")\n",
+    "link.click()\n",
+    "\n",
+    "# Wait until the new page is completely loaded\n",
+    "WebDriverWait(driver, 10).until(\n",
+    "    lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
+    ")"
    ]
   },
   {
