--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -61,20 +61,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def fill_value_with_id(driver, id, value):\n",
+    "    try:\n",
+    "        driver.execute_script(\"\"\"\n",
+    "            var campo = arguments[0];\n",
+    "            var valor = arguments[1];\n",
+    "            campo.value = valor;\n",
+    "\n",
+    "            // Disparar o evento change\n",
+    "            var changeEvent = new Event('change', { bubbles: true });\n",
+    "            campo.dispatchEvent(changeEvent);\n",
+    "        \"\"\", driver.find_element(By.ID, id), value)\n",
+    "        WebDriverWait(driver, 10).until(\n",
+    "        lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
+    "        )\n",
+    "    except Exception as e:\n",
+    "        print(\"Ocorreu um erro ao preencher o campo:\\n\", e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Checks if the webdriver is installed and up to date\n",
     "driver = webdriver.Chrome(service=ChromeService(ChromeDriverManager().install()))\n",
@@ -154,7 +167,7 @@
     "WebDriverWait(driver, 10).until(\n",
     "    lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
     ")\n",
-    "time.sleep(5)\n",
+    "time.sleep(3)\n",
     "# Wait until the href element is loaded and ready\n",
     "table = WebDriverWait(driver, 10).until(\n",
     "    EC.visibility_of_element_located((By.ID, 'olvOrdemServico'))\n",
@@ -168,7 +181,45 @@
     "# Wait until the new page is completely loaded\n",
     "WebDriverWait(driver, 10).until(\n",
     "    lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
-    ")"
+    ")\n",
+    "\n",
+    "time.sleep(3)\n",
+    "# Fill the fields\n",
+    "# date_in = driver.find_element(By.ID, 'txtData')\n",
+    "# driver.execute_script(\"\"\"\n",
+    "#     var campo = arguments[0];\n",
+    "#     var valor = arguments[1];\n",
+    "#     campo.value = valor;\n",
+    "\n",
+    "#     // Disparar o evento change\n",
+    "#     var changeEvent = new Event('change', { bubbles: true });\n",
+    "#     campo.dispatchEvent(changeEvent);\n",
+    "\n",
+    "#     // Disparar o evento keypress\n",
+    "#     var keypressEvent = new KeyboardEvent('keypress', { bubbles: true, cancelable: true, key: 'Enter', charCode: 13 });\n",
+    "#     campo.dispatchEvent(keypressEvent);\n",
+    "# \"\"\", date_in, '20/02/2025')\n",
+    "\n",
+    "# proj_in = driver.find_element(By.ID, 'txtProjeto')\n",
+    "# proj_in.send_keys('026')\n",
+    "# WebDriverWait(driver, 10).until(\n",
+    "#     lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
+    "# )\n",
+    "# talhao_in = driver.find_element(By.ID, 'txtTalhao')\n",
+    "# talhao_in.send_keys('V01651')\n",
+    "# WebDriverWait(driver, 10).until(\n",
+    "#     lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
+    "# )\n",
+    "# operacao_in = driver.find_element(By.ID, 'txtOperacao')\n",
+    "# operacao_in.send_keys('1036')\n",
+    "# WebDriverWait(driver, 10).until(\n",
+    "#     lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
+    "# )\n",
+    "# projInv_in = driver.find_element(By.ID, 'txtProjInv')\n",
+    "# projInv_in.send_keys('3')\n",
+    "# WebDriverWait(driver, 10).until(\n",
+    "#     lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
+    "# )"
    ]
   },
   {
