--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -184,42 +184,20 @@
     ")\n",
     "\n",
     "time.sleep(3)\n",
-    "# Fill the fields\n",
-    "# date_in = driver.find_element(By.ID, 'txtData')\n",
-    "# driver.execute_script(\"\"\"\n",
-    "#     var campo = arguments[0];\n",
-    "#     var valor = arguments[1];\n",
-    "#     campo.value = valor;\n",
     "\n",
-    "#     // Disparar o evento change\n",
-    "#     var changeEvent = new Event('change', { bubbles: true });\n",
-    "#     campo.dispatchEvent(changeEvent);\n",
+    "WebDriverWait(driver, 10).until(\n",
+    "    lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
+    ")\n",
     "\n",
-    "#     // Disparar o evento keypress\n",
-    "#     var keypressEvent = new KeyboardEvent('keypress', { bubbles: true, cancelable: true, key: 'Enter', charCode: 13 });\n",
-    "#     campo.dispatchEvent(keypressEvent);\n",
-    "# \"\"\", date_in, '20/02/2025')\n",
-    "\n",
-    "# proj_in = driver.find_element(By.ID, 'txtProjeto')\n",
-    "# proj_in.send_keys('026')\n",
-    "# WebDriverWait(driver, 10).until(\n",
-    "#     lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
-    "# )\n",
-    "# talhao_in = driver.find_element(By.ID, 'txtTalhao')\n",
-    "# talhao_in.send_keys('V01651')\n",
-    "# WebDriverWait(driver, 10).until(\n",
-    "#     lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
-    "# )\n",
-    "# operacao_in = driver.find_element(By.ID, 'txtOperacao')\n",
-    "# operacao_in.send_keys('1036')\n",
-    "# WebDriverWait(driver, 10).until(\n",
-    "#     lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
-    "# )\n",
-    "# projInv_in = driver.find_element(By.ID, 'txtProjInv')\n",
-    "# projInv_in.send_keys('3')\n",
-    "# WebDriverWait(driver, 10).until(\n",
-    "#     lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
-    "# )"
+    "fill_value_with_id(driver, 'txtRegiao', '11')\n",
+    "time.sleep(3)\n",
+    "fill_value_with_id(driver, 'txtProjeto', '026')\n",
+    "time.sleep(3)\n",
+    "fill_value_with_id(driver, 'txtTalhao', 'V01651')\n",
+    "time.sleep(3)\n",
+    "fill_value_with_id(driver, 'txtOperacao', '1036')\n",
+    "time.sleep(3)\n",
+    "fill_value_with_id(driver, 'txtProjInv', '3')"
    ]
   },
   {
