--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -72,10 +72,20 @@
     "            var valor = arguments[1];\n",
     "            campo.value = valor;\n",
     "\n",
-    "            // Disparar o evento change\n",
+    "            // Trigger the change event\n",
     "            var changeEvent = new Event('change', { bubbles: true });\n",
     "            campo.dispatchEvent(changeEvent);\n",
     "        \"\"\", driver.find_element(By.ID, id), value)\n",
+    "\n",
+    "        # Wait for the ASP.NET element to reload\n",
+    "        WebDriverWait(driver, 10).until(\n",
+    "            EC.staleness_of(driver.find_element(By.ID, id))\n",
+    "        )\n",
+    "        WebDriverWait(driver, 10).until(\n",
+    "            EC.presence_of_element_located((By.ID, id))\n",
+    "        )\n",
+    "\n",
+    "        # Wait until page is ready and fully loaded\n",
     "        WebDriverWait(driver, 10).until(\n",
     "        lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
     "        )\n",
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,13 +200,13 @@
     ")\n",
     "\n",
     "fill_value_with_id(driver, 'txtRegiao', '11')\n",
-    "time.sleep(3)\n",
+    "# time.sleep(3)\n",
     "fill_value_with_id(driver, 'txtProjeto', '026')\n",
-    "time.sleep(3)\n",
+    "# time.sleep(3)\n",
     "fill_value_with_id(driver, 'txtTalhao', 'V01651')\n",
-    "time.sleep(3)\n",
+    "# time.sleep(3)\n",
     "fill_value_with_id(driver, 'txtOperacao', '1036')\n",
-    "time.sleep(3)\n",
+    "# time.sleep(3)\n",
     "fill_value_with_id(driver, 'txtProjInv', '3')"
    ]
   },
