--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -49,7 +49,8 @@
     "\n",
     "link = os.getenv('LINK')\n",
     "user_login = os.getenv('USER_LOGIN')\n",
-    "user_pw = os.getenv('USER_PASSWORD')"
+    "user_pw = os.getenv('USER_PASSWORD')\n",
+    "file_path = os.getenv('XLSX_FILEPATH')"
    ]
   },
   {
@@ -208,6 +209,15 @@
     "fill_value_with_id(driver, 'txtOperacao', '1036')\n",
     "# time.sleep(3)\n",
     "fill_value_with_id(driver, 'txtProjInv', '3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel(file_path)"
    ]
   },
   {
