--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -25,9 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/aprix/Documents/repositorios_pessoal/web_automatization_project/.venv/lib/python3.12/site-packages/openpyxl/reader/workbook.py:118: UserWarning: Print area cannot be set to Defined name: Tabela13[[#All],[Horto]:[Fatura]].\n",
+      "  warn(f\"Print area cannot be set to Defined name: {defn.value}.\")\n",
+      "/home/aprix/Documents/repositorios_pessoal/web_automatization_project/.venv/lib/python3.12/site-packages/openpyxl/worksheet/_reader.py:329: UserWarning: Data Validation extension is not supported and will be removed\n",
+      "  warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -50,7 +61,9 @@
     "link = os.getenv('LINK')\n",
     "user_login = os.getenv('USER_LOGIN')\n",
     "user_pw = os.getenv('USER_PASSWORD')\n",
-    "file_path = os.getenv('XLSX_FILEPATH')"
+    "file_path = os.getenv('XLSX_FILEPATH')\n",
+    "\n",
+    "df = pd.read_excel(file_path)\n"
    ]
   },
   {
@@ -62,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,14 +104,41 @@
     "        lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
     "        )\n",
     "    except Exception as e:\n",
-    "        print(\"Ocorreu um erro ao preencher o campo:\\n\", e)"
+    "        print(\"Ocorreu um erro ao preencher o campo:\\n\", e)\n",
+    "\n",
+    "def evaluate_1036_amount_kg(driver, id_prog, fill_id, value):\n",
+    "    prog_kg = driver.find_element(By.ID, id_prog).text\n",
+    "    if convert_to_float(prog_kg) == value:\n",
+    "        fill_value_with_id(driver, fill_id, convert_to_str(value))\n",
+    "    elif convert_to_float(prog_kg) < value:\n",
+    "        fill_value_with_id(driver, fill_id, prog_kg)\n",
+    "        print(\"O valor programado é menor do que o realizado. Lançando valor programado.\")\n",
+    "    elif convert_to_float(prog_kg) > value:\n",
+    "        fill_value_with_id(driver, fill_id, convert_to_str(value))\n",
+    "        print(\"O valor programado é maior do que o realizado. Lançando valor realizado.\")\n",
+    "\n",
+    "def convert_to_float(value):\n",
+    "    return float(value.replace(',', '.'))\n",
+    "\n",
+    "def convert_to_str(value):\n",
+    "    return str(value).replace('.', ',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ocorreu um erro ao preencher o campo:\n",
+      " Message: \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Checks if the webdriver is installed and up to date\n",
     "driver = webdriver.Chrome(service=ChromeService(ChromeDriverManager().install()))\n",
@@ -193,7 +233,6 @@
     "WebDriverWait(driver, 10).until(\n",
     "    lambda driver: driver.execute_script('return document.readyState') == 'complete'\n",
     ")\n",
-    "\n",
     "time.sleep(3)\n",
     "\n",
     "WebDriverWait(driver, 10).until(\n",
@@ -201,23 +240,12 @@
     ")\n",
     "\n",
     "fill_value_with_id(driver, 'txtRegiao', '11')\n",
-    "# time.sleep(3)\n",
-    "fill_value_with_id(driver, 'txtProjeto', '026')\n",
-    "# time.sleep(3)\n",
-    "fill_value_with_id(driver, 'txtTalhao', 'V01651')\n",
-    "# time.sleep(3)\n",
-    "fill_value_with_id(driver, 'txtOperacao', '1036')\n",
-    "# time.sleep(3)\n",
-    "fill_value_with_id(driver, 'txtProjInv', '3')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_excel(file_path)"
+    "fill_value_with_id(driver, 'txtProjeto', df.iloc[0]['Horto'])\n",
+    "fill_value_with_id(driver, 'txtTalhao', df.iloc[0]['Talhão'])\n",
+    "fill_value_with_id(driver, 'txtOperacao', df.iloc[0]['N. Op'])\n",
+    "fill_value_with_id(driver, 'txtProjInv', '3')\n",
+    "fill_value_with_id(driver, 'txtFuncionarioEncarregadoMatr', 'RS001')\n",
+    "evaluate_1036_amount_kg(driver, 'lblValorQtdeProg', 'txtArea', df.iloc[0]['Area exec.'])"
    ]
   },
   {
