feat: remove all np.nan values from the column 'N.Op'

--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -25,16 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/aprix/Documents/repositorios_pessoal/web_automatization_project/.venv/lib/python3.12/site-packages/openpyxl/reader/workbook.py:118: UserWarning: Print area cannot be set to Defined name: Tabela13[[#All],[Horto]:[Fatura]].\n",
+      "/home/ebevilaqua/Documents/repositorios_edmar/web_automatization_project/.venv/lib/python3.12/site-packages/openpyxl/reader/workbook.py:118: UserWarning: Print area cannot be set to Defined name: Tabela13[[#All],[Horto]:[Fatura]].\n",
       "  warn(f\"Print area cannot be set to Defined name: {defn.value}.\")\n",
-      "/home/aprix/Documents/repositorios_pessoal/web_automatization_project/.venv/lib/python3.12/site-packages/openpyxl/worksheet/_reader.py:329: UserWarning: Data Validation extension is not supported and will be removed\n",
+      "/home/ebevilaqua/Documents/repositorios_edmar/web_automatization_project/.venv/lib/python3.12/site-packages/openpyxl/worksheet/_reader.py:329: UserWarning: Data Validation extension is not supported and will be removed\n",
       "  warn(msg)\n"
      ]
     }
@@ -122,6 +122,31 @@
     "\n",
     "def convert_to_str(value):\n",
     "    return str(value).replace('.', ',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1036, 399, 9070, '1035/1036 ou 9070', 1070, 9053, 1037,\n",
+       "       '1035/1036', 1035], dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dropna(subset=[\"N. Op\"], inplace=True)\n",
+    "\n",
+    "# TODO\n",
+    "# Check if all the listed values are valid. If not, print the error and skip to the next one\n",
+    "df[\"N. Op\"].unique()"
    ]
   },
   {
