--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -126,6 +126,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Create multiple subsets of the dataframe, one for each `N. Op.`\n",
+    "\n",
+    "# TODO: Create the business logic to fill the form for each subset.\n",
+    "\n",
+    "# TODO: Create a method to validate each row of the dataframe, before filling the form."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
