--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -25,20 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ebevilaqua/Documents/repositorios_edmar/web_automatization_project/.venv/lib/python3.12/site-packages/openpyxl/reader/workbook.py:118: UserWarning: Print area cannot be set to Defined name: Tabela13[[#All],[Horto]:[Fatura]].\n",
-      "  warn(f\"Print area cannot be set to Defined name: {defn.value}.\")\n",
-      "/home/ebevilaqua/Documents/repositorios_edmar/web_automatization_project/.venv/lib/python3.12/site-packages/openpyxl/worksheet/_reader.py:329: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  warn(msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -75,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,31 +119,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Create multiple subsets of the dataframe, one for each `N. Op.`\n",
-    "\n",
-    "# TODO: Create the business logic to fill the form for each subset.\n",
-    "\n",
-    "# TODO: Create a method to validate each row of the dataframe, before filling the form."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1036, 399, 9070, '1035/1036 ou 9070', 1070, 9053, 1037,\n",
-       "       '1035/1036', 1035], dtype=object)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "df.dropna(subset=[\"N. Op\"], inplace=True)\n",
     "\n",
     "# TODO\n",
@@ -164,19 +128,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ocorreu um erro ao preencher o campo:\n",
-      " Message: \n",
-      "\n"
-     ]
+   "outputs": [],
+   "source": [
+    "df_types = {\n",
+    "    'Horto': str,\n",
+    "    'Projeto': str,\n",
+    "    'Talhão': str,\n",
+    "    'Status': str,\n",
+    "    'N. Op': str,\n",
+    "    'Operação': str,\n",
+    "    'Area há': float,\n",
+    "    'Area exec.': float,\n",
+    "    'Classe': str,\n",
+    "    'Horas': float,\n",
+    "    'KG': float,\n",
+    "    'Enc.': float,\n",
+    "    'Op.': float,\n",
+    "    'Aux.': float,\n",
+    "    'Nº Pes.': float,\n",
+    "    'Total de Hs': float,\n",
+    "    'Valor Unit.': float,\n",
+    "    'Total': float,\n",
+    "    ' Data': str,\n",
+    "    'Analista': str,\n",
+    "    'Equipe': str,\n",
+    "    'OBSERVAÇÃO': str,\n",
+    "    'Fatura': str,\n",
+    "    'Município': str,\n",
+    "    'Lançamento no SGF': str\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
     }
-   ],
+   },
+   "outputs": [],
+   "source": [
+    "def convert_columns_to_numeric(df, df_types):\n",
+    "    for column in df.select_dtypes(include=['object']).columns:\n",
+    "        if column in df_types and df_types[column] in [float, int]:\n",
+    "            # Replace ',' with '.' to handle decimal points\n",
+    "            df[column] = df[column].str.replace(',', '.')\n",
+    "            # Replace NaN with 0\n",
+    "            df[column] = df[column].fillna(0)\n",
+    "            # Convert the column to the appropriate numeric type\n",
+    "            df[column] = pd.to_numeric(df[column], errors='coerce')\n",
+    "    # Convert columns to the specified types in df_types\n",
+    "    df = df.astype(df_types, errors='ignore')\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = convert_columns_to_numeric(df, df_types)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Create multiple subsets of the dataframe, one for each `N. Op.`\n",
+    "\n",
+    "# TODO: Create the business logic to fill the form for each subset.\n",
+    "\n",
+    "# TODO: Create a method to validate each row of the dataframe, before filling the form."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Checks if the webdriver is installed and up to date\n",
     "driver = webdriver.Chrome(service=ChromeService(ChromeDriverManager().install()))\n",
