--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -201,11 +201,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def split_df_subset(df:pd.DataFrame, subset:str) -> pd.DataFrame:\n",
+    "    assert isinstance(df, pd.DataFrame), 'df must be a pandas DataFrame'\n",
+    "    assert isinstance(subset, str), 'subset must be a string'\n",
+    "    assert subset in df[\"N. Op\"].unique(), 'subset must be in df[\\'subset\\'].unique()'\n",
+    "\n",
+    "    return df[df[\"N. Op\"] == subset]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Create multiple subsets of the dataframe, one for each `N. Op.`\n",
-    "\n",
     "# TODO: Create the business logic to fill the form for each subset.\n",
     "\n",
     "# TODO: Create a method to validate each row of the dataframe, before filling the form."
