--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -110,28 +110,8 @@
     "    return float(value.replace(',', '.'))\n",
     "\n",
     "def convert_to_str(value):\n",
-    "    return str(value).replace('.', ',')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.dropna(subset=[\"N. Op\"], inplace=True)\n",
+    "    return str(value).replace('.', ',')\n",
     "\n",
-    "# TODO\n",
-    "# Check if all the listed values are valid. If not, print the error and skip to the next one\n",
-    "df[\"N. Op\"].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df_types = {\n",
     "    'Horto': str,\n",
     "    'Projeto': str,\n",
@@ -158,19 +138,8 @@
     "    'Fatura': str,\n",
     "    'Município': str,\n",
     "    'Lançamento no SGF': str\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "ruby"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "}\n",
+    "\n",
     "def convert_columns_to_numeric(df, df_types):\n",
     "    for column in df.select_dtypes(include=['object']).columns:\n",
     "        if column in df_types and df_types[column] in [float, int]:\n",
@@ -182,7 +151,27 @@
     "            df[column] = pd.to_numeric(df[column], errors='coerce')\n",
     "    # Convert columns to the specified types in df_types\n",
     "    df = df.astype(df_types, errors='ignore')\n",
-    "    return df"
+    "    return df\n",
+    "\n",
+    "def split_df_subset(df:pd.DataFrame, subset:str) -> pd.DataFrame:\n",
+    "    assert isinstance(df, pd.DataFrame), 'df must be a pandas DataFrame'\n",
+    "    assert isinstance(subset, str), 'subset must be a string'\n",
+    "    assert subset in df[\"N. Op\"].unique(), 'subset must be in df[\\'subset\\'].unique()'\n",
+    "\n",
+    "    return df[df[\"N. Op\"] == subset]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dropna(subset=[\"N. Op\"], inplace=True)\n",
+    "\n",
+    "# TODO\n",
+    "# Check if all the listed values are valid. If not, print the error and skip to the next one\n",
+    "df[\"N. Op\"].unique()"
    ]
   },
   {
@@ -196,24 +185,6 @@
    "outputs": [],
    "source": [
     "df = convert_columns_to_numeric(df, df_types)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "ruby"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def split_df_subset(df:pd.DataFrame, subset:str) -> pd.DataFrame:\n",
-    "    assert isinstance(df, pd.DataFrame), 'df must be a pandas DataFrame'\n",
-    "    assert isinstance(subset, str), 'subset must be a string'\n",
-    "    assert subset in df[\"N. Op\"].unique(), 'subset must be in df[\\'subset\\'].unique()'\n",
-    "\n",
-    "    return df[df[\"N. Op\"] == subset]"
    ]
   },
   {
@@ -340,13 +311,6 @@
     "fill_value_with_id(driver, 'txtFuncionarioEncarregadoMatr', 'RS001')\n",
     "evaluate_1036_amount_kg(driver, 'lblValorQtdeProg', 'txtArea', df.iloc[0]['Area exec.'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
