--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -25,9 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ebevilaqua/Documents/repositorios_edmar/web_automatization_project/.venv/lib/python3.12/site-packages/openpyxl/reader/workbook.py:118: UserWarning: Print area cannot be set to Defined name: Tabela13[[#All],[Horto]:[Fatura]].\n",
+      "  warn(f\"Print area cannot be set to Defined name: {defn.value}.\")\n",
+      "/home/ebevilaqua/Documents/repositorios_edmar/web_automatization_project/.venv/lib/python3.12/site-packages/openpyxl/worksheet/_reader.py:329: UserWarning: Data Validation extension is not supported and will be removed\n",
+      "  warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -172,6 +183,88 @@
     "# TODO\n",
     "# Check if all the listed values are valid. If not, print the error and skip to the next one\n",
     "df[\"N. Op\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3544660285.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mif row[]\u001b[39m\n           ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generic_validate_row(row):\n",
+    "    if row[\"N. Op\"] not in df[\"N. Op\"].unique():\n",
+    "        print(f\"O número de operação {row['N. Op']} não foi encontrado no arquivo.\")\n",
+    "        return False\n",
+    "    if row[\"Horto\"].isnull():\n",
+    "        print(f\"O Horto não foi preenchido para a operação {row['N. Op']}.\")\n",
+    "        return False\n",
+    "    if row[\"Talhão\"].isnull():\n",
+    "        print(f\"O Talhão não foi preenchido para a operação {row['N. Op']}.\")\n",
+    "        return False\n",
+    "    if row[\"Área há\"].isnull():\n",
+    "        print(f\"A área total do Talhão não foi preenchida para a operação {row['N. Op']}.\")\n",
+    "        return False\n",
+    "    if row[\"Área exec.\"].isnull():\n",
+    "        print(f\"A área executada do Talhão não foi preenchida para a operação {row['N. Op']}.\")\n",
+    "        return False\n",
+    "    if row[\"Classe\"].isnull():\n",
+    "        print(f\"A classe não foi preenchida para a operação {row['N. Op']}.\")\n",
+    "        return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Horto                False\n",
+       "Projeto              False\n",
+       "Talhão               False\n",
+       "Status               False\n",
+       "N. Op                False\n",
+       "Operação             False\n",
+       "Area há              False\n",
+       "Area exec.           False\n",
+       "Classe               False\n",
+       "Horas                False\n",
+       "KG                   False\n",
+       "Enc.                 False\n",
+       "Op.                  False\n",
+       "Aux.                 False\n",
+       "Nº Pes.              False\n",
+       "Total de Hs           True\n",
+       "Valor Unit.          False\n",
+       "Total                 True\n",
+       " Data                False\n",
+       "Analista             False\n",
+       "Equipe               False\n",
+       "OBSERVAÇÃO            True\n",
+       "Fatura               False\n",
+       "Município             True\n",
+       "Lançamento no SGF    False\n",
+       "Name: 0, dtype: bool"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[0].isnull()"
    ]
   },
   {
