--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -56,6 +56,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_nop_unique = list(df[\"N. Op\"].unique())\n",
+    "list_nop_unique = [str(i) for i in list_nop_unique]\n",
+    "list_nop_unique.sort()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
