--- a/automatization.ipynb
+++ b/automatization.ipynb
@@ -232,6 +232,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This section will be used to validate the rows before filling the form\n",
+    "\n",
     "# TODO: Create the business logic to fill the form for each subset.\n",
     "\n",
     "# TODO: Create a method to validate each row of the dataframe, before filling the form."
